# asio_experiments

./: .clang-format  CMakeLists.txt  README.md  append_prepend.cpp  as_single.cpp  async_launch.cpp  async_op.cpp  async_read_some.cpp  async_semaphore.cpp  atomic_group.cpp  bind_lifetime.cpp  copy.cpp  defer_defer.cpp  post_on.cpp  tick_state.cpp  timed.cpp  transactions.cpp
debug/: report_fatal.hpp
filing-cabinet/: expanding_circular_buffer.hpp
include/asio/experimental/: async_semaphore.hpp
include/asio/experimental/detail/: bilist_node.hpp  semaphore_wait_op.hpp  semaphore_wait_op_model.hpp
include/asio/experimental/detail/impl/: semaphore_wait_op.hpp  semaphore_wait_op_model.hpp
include/asio/experimental/impl/: async_semaphore_base.hpp  basic_async_semaphore.hpp  semaphore_wait_op.hpp
include/asioex/: async.hpp  async_op.hpp  async_read_some.hpp  async_semaphore.hpp  basic_transfer_latch.hpp  bind_lifetime.hpp  condition_variable.hpp  copy.hpp  error.hpp  error_code.hpp  for.hpp  latched_completion.hpp  mutex.hpp  null_mutex.hpp  redirect_cancellation.hpp  tick_state.hpp  transaction.hpp
include/asioex/concepts/: basic_lockable.hpp  latched_completion_for.hpp  transfer_latch.hpp
include/asioex/detail/: bilist_node.hpp  semaphore_wait_op.hpp  semaphore_wait_op_model.hpp
include/asioex/detail/impl/: semaphore_wait_op.hpp  semaphore_wait_op_model.hpp
include/asioex/impl/: async_read_some.hpp  async_semaphore_base.hpp  basic_async_semaphore.hpp  transaction.hpp
include/asioex/mt/: transfer_latch.hpp
include/asioex/st/: transfer_latch.hpp
test/: CMakeLists.txt  async.cpp  atomic_group.cpp  condition_variable.cpp  for.cpp  long_running.cpp  mutex.cpp  post_on.cpp  redirect_cancellation.cpp  scratch.cpp  self_contained_test.cpp.in  timed.cpp
